@@ -55,11 +55,14 @@ Console.prototype.getOutput = function() {
            });
 }
 
+Console.prototype.clickHandler = function(ev) {
+    $('#et-' + ev.target.id.substr(3)).toggle();
+}
+
 Console.prototype.addOutput = function(data) {
-    var lines = data.result.split('\n');
-    for (var i = 0; i < lines.length; i++)
-        if (lines[i])
-            $('<div>').text(lines[i]).addClass('output').insertBefore(this.cursor);
+    var html = $(data.result);
+    html.filter('.exc-line').click(this.clickHandler);
+    html.insertBefore(this.cursor);
     window.scrollBy(0, document.documentElement.scrollHeight);
 }
 
